style: Fixed alignment of code blocks.

--- a/themes/jamesrwilliams/assets/scss/partials/_typography.scss
+++ b/themes/jamesrwilliams/assets/scss/partials/_typography.scss
@@ -4,12 +4,8 @@ code {
 	margin: 0 5px 0 1px;
 	font-size: 90%;
 	background: white;
-	padding: .2rem .3rem .1rem .3rem;
+	padding: .2rem .4rem .1rem .3rem;
 	border-radius: .2rem;
-}
-
-.highlight {
-	margin-left: -5%;
 }
 
 blockquote {
@@ -23,7 +19,7 @@ blockquote {
 
 pre {
 	overflow: scroll;
-	padding: 15px;
+	padding: 15px 25px;
 
 	code {
 		background: none;
